interpreter: Add stubs and document UnificationActivationRecord

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -64,10 +64,11 @@ no_more_solutions = No more solutions.
 
 button_send = Send
 
-position = after %s in Line %d, Column %d
+position = near %s in Line %d, Column %d
 illegal_char = Illegal character
 operator_not_recognized = Operator %s not recognized
 expected_instead = Expected %s instead of '%s'
+expected_goalrest = Expected 'is', '=' or arithmetic comparison, got '%s'
 goal_not_supported = Goal not supported
 term = a term
 functor = functor
