--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -73,3 +73,5 @@ goal_not_supported = Goal not supported
 term = a term
 functor = functor
 unsupported_lists = Lists not supported
+
+unification = Unification
