view: Add cancel button to toolbar

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -28,6 +28,7 @@ tooltip_parse = Parse program
 tooltip_format = Format program
 tooltip_step = Next step
 tooltip_next = Next solution
+tooltip_cancel = Cancel
 
 yes = Yes
 no = No
