view: Add message for already formatted source code

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -46,6 +46,7 @@ open_file_success = Successfully opened file
 save_file_success = Successfully saved file
 export_file_success = Successfully exported file
 editor_formatted = Successfully formatted source code
+editor_already_formatted = Source code already properly formatted
 
 open_file_error = Error opening file
 save_file_error = Error saving file
