view: Add step back button

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -26,6 +26,7 @@ tooltip_open = Open file
 tooltip_save = Save file
 tooltip_parse = Parse program
 tooltip_format = Format program
+tooltip_stepback = Previous step
 tooltip_step = Next step
 tooltip_next = Next solution
 tooltip_cancel = Cancel
