code: Change translation from recently opened to recently used

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -3,7 +3,7 @@ menu_new = New
 menu_open = Open
 menu_save = Save
 menu_saveas = Save as...
-menu_recent = Recently opened
+menu_recent = Recently used
 menu_exit = Exit
 
 menu_program = Program
