interpreter: Implement arithmetic ("is") goals

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -62,6 +62,9 @@ parser_query_error = Error parsing query
 visualisation_started = Visualisation started.
 viper_started = VIPER %s ready
 
+arithmetic_unset_variable = Unset variable: %s
+arithmetic_unsupported_term = Unsupported term: %s
+
 solution_found = Found solution
 solution_yes = yes
 no_more_solutions = No more solutions.
