interpreter: Implement comparison goals

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -64,6 +64,8 @@ viper_started = VIPER %s ready
 
 arithmetic_unset_variable = Unset variable: %s
 arithmetic_unsupported_term = Unsupported term: %s
+arithmetic_comparison_failed = false
+arithmetic_comparison_succeeded = true
 
 solution_found = Found solution
 solution_yes = yes
